core/src/components/dialog/style/dialog.scss
@use 'style/utils';
@use '~@maltjoy/tokens/src/spacing';
@use './shared' as shared;

$CLASS: '.joy-dialog';

$_mobile-breakpoint: 767px;
$_mobile-cta_breakpoint: 400px;

@keyframes dialogTransitionStart {
    from {
        opacity: 0;
        transform: scale(0.9);
    }
    to {
        opacity: 1;
        transform: scale(1);
    }
}

@keyframes dialogTransitionEnd {
    from {
        opacity: 1;
        transform: scale(1);
    }
    to {
        opacity: 0;
        transform: scale(0.9);
    }
}

:host {
    --dialog-width: 580px;
    --dialog-font-size-title: var(--joy-font-size-xl);
    --dialog-transition-duration: 0.01ms;

    display: block;
    position: fixed;
    opacity: 0;
    width: 0;
    height: 0;
    z-index: -1;
    top: 0;
    left: 0;
    right: 0;
    margin: 0 auto;
    box-sizing: border-box;
    outline: none;

    @media screen and (max-width: #{$_mobile-breakpoint})  {
        padding: 0;
        --dialog-width: 100%;
    }
}

:host(#{$CLASS}--size-large) {
    --dialog-width: 780px;
}


:host(:not(#{$CLASS}--demo)) {
    --dialog-transition-duration: var(--joy-transition-duration-default);
}

:host(#{$CLASS}--open) {
    width: var(--dialog-width);
    opacity: 1;
    height: auto;
    z-index: var(--joy-core-z-index-dialog);

    @media screen and (min-width: #{$_mobile-breakpoint})  {
        padding: 50px 0;
    }
}

#{$CLASS}--wrapper-open {
    #{$CLASS} {
        animation: dialogTransitionStart var(--dialog-transition-duration) var(--joy-transition-timing-function) forwards;
    }
}

#{$CLASS}--wrapper-hiding {
    #{$CLASS} {
        animation: dialogTransitionEnd var(--dialog-transition-duration) var(--joy-transition-timing-function) forwards;
    }
}

#{$CLASS} {
    $_padding: spacing.$joy-core-spacing-9;
    $_dimension: calc(100% - #{$_padding});
    $full-height: calc(100vh - #{$_padding});

    &--wrapper {
        position: static;
        width: 100%;
        height: 100%;
        top: 0;
        left: 0;
    }

    position: relative;
    background-color: white;
    width: var(--dialog-width);
    max-width: 100%;
    margin: 0 auto;
    border-radius: var(--joy-core-radius-4);
    padding: $_padding;
    box-shadow: var(--joy-core-elevation-4);
    max-height: 800px;
    overflow-y: auto;
    overflow-x: hidden;
    box-sizing: border-box;

    @media screen and (max-width: #{$_mobile-breakpoint})  {
        padding: var(--joy-core-spacing-6);
        height: 100vh;
        max-height: 100vh;
        max-width: 100%;
        width: 100%;
        overflow-y: auto;
        border-radius: var(--joy-core-radius-0);
    }

    &--banner {
        position: relative;
        left: -#{$_padding};
        top: -#{$_padding};
        width: calc(100% + #{$_padding * 2});
        background-size: cover;
        background-repeat: no-repeat;
        background-position: center;
    }

    &--header {
        margin-bottom: var(--joy-core-spacing-9);

        h5 {
            padding-right: 45px;
            @include shared.headerTitleStyle();
        }
    }

    &--subheader {
        position: relative;
        @include utils.getFontProperties(s);
        margin: var(--joy-core-spacing-2) 0 0 0;
        padding: 0;
    }

    // The id is used only to have more weight that default joy-icon css
    #joy-dialog--close {
        position: absolute;
        cursor: pointer;
        padding: 10px;
        right: $_padding;
        top: $_padding;
        color: var(--joy-color-text-body);
        background-color: white;

        @media screen and (max-width: #{$_mobile-breakpoint})  {
            right: 5px;
            top: 5px;
        }

        &:after {
            content: "";
            position: absolute;
            left: 0;
            right: 0;
            top: 0;
            width: 100%;
            height: 100%;
            opacity: 0.05;
            background-color: transparent;
            border-radius: 50%;
            transition: background-color var(--joy-transition-duration-default) var(--joy-transition-timing-function);
        }

        &:hover, &:focus {
            &:after {
                background-color: currentColor;
            }
        }
    }

    &--footer {
        position: relative;
        display: flex;
        justify-content: flex-end;
        // Footer default style

        &-filled {
            margin-top: var(--joy-core-spacing-5);
        }

        @media screen and (min-width: #{$_mobile-cta_breakpoint + 1}) {
            joy-button:last-child {
                margin-left: var(--joy-core-spacing-4);
            }
        }

        @media screen and (max-width: #{$_mobile-cta_breakpoint}) {
            flex-direction: column;
            align-items: stretch;

            joy-button:last-child:not(:first-child) {
                margin-top: var(--joy-core-spacing-4);
            }
        }
    }
}

::slotted(p) {
    margin: 0;
    padding: 0;
}

::slotted(joy-indicators) {
    justify-content: center;
    margin-top: var(--joy-core-spacing-4);
}

// Documentation purpose only
:host(.joy-dialog--demo) {
    position: relative;
    opacity: 1;
    z-index: 1;
    width: auto;
    height: auto;
}

